Fixed issue with long file names overflowing

--- a/src/app/widgets/Visualizer/RecentFileList.styl
+++ b/src/app/widgets/Visualizer/RecentFileList.styl
@@ -43,6 +43,7 @@
 
 .recent-file {
   width: 100%;
+  text-overflow: ellipsis;
   padding: 0.5rem;
   border-radius 0.25rem;
   color: #6c6c6c;
